1.48
-----------------
evtClassDefs v0r2

Run fakeFT2 at chunk level.
Make setupCrumbs depend on fakeFT2.
Get dictionaries, cuts, and classifiers for FT1/LS1 from evtClassDefs.
Use a private app build directory for each L1 version.

Back to ft2Util v1r1p44
GR v13r11p7
ST v9r5

Added the per-run ingest capability.
-------------------------------------------


1.47 2007-04-24
-----------------
ft2Util v1r1p44
Make ingestion to Max's DB work on test server.
-------------------------------------------


1.46 2007-04-24
-----------------
ft2Util v1r2p9
-------------------------------------------


1.45
-----------------
GR v13r11p6
ft2Util v1r2p8
EngineeringModelRoot v3r14

Supply start & end times to fakeFT2.
Make fakeFT2 depend on findChunks so it doesn't escape the run lock.
Supply gaps file to ft2Entries.
config.crumbSize=15000 (was 5000).
-------------------------------------------


1.44
-----------------
dataMonitoring/AlarmsCfg v1r0p4
dataMonitoring/FastMonCfg: v1r0p10
dataMonitoring/Common: v3r0p13
dataMonitoring/FastMon: v3r0p13
svac/Monitor: v1r0p13
dataMonitoring/DigiReconCalMeritCfg: v1r0p15
ft2Util v1r1p44
ScienceTools v9r5

Move fakeFT2 into doRun.
Fix chicken-and-egg problem when installing a new version of GPLtools.
meritTrend and meritEor depend on SUCCESS of recon.
Remove unneeded dependencies from mergeReconTrend and mergeReconEor.
-------------------------------------------


1.43
-----------------
AlarmsCfg v1r0p2
FastMon v3r0p8
FastMonCfg v1r0p2
GPLtools v1r10 LONE-30
Monitor v1r0p6
DigiReconCalMeritCfg v1r0p6

Update to new netlogger. LONE-27
Add merit monitoring. LONE-29
When logging alarms, put counts in PI variables and log tags. LONE-28
Use private install of GPLtools.
Compare digi & fastMon EOR histos. LONE-31

Use new AFS buffers. LONE-26
-------------------------------------------


1.42
-----------------
GR v13r11p4
EngineeringModelRoot v3r12
FastMon v3r0p5
FastMonCfg v1r0p1
IGRF v1r0p1
TestReport v5r6
