@@ -6,6 +6,9 @@ Run fakeFT2 at chunk level.
 Make setupCrumbs depend on fakeFT2.
 Get dictionaries, cuts, and classifiers for FT1/LS1 from evtClassDefs.
 Use a private app build directory for each L1 version.
+Use '-t MC' for runStrip instead of '-t MCOktTest'.
+Start work on implementing GDM-27.
+Keep core file when recon crashes.
 
 Back to ft2Util v1r1p44
 GR v13r11p7
